--- a/100du/css/style.css
+++ b/100du/css/style.css
@@ -29,9 +29,8 @@ body { font-size:12px; font-family:"微软雅黑"; }
 .main_ad,.side_section,.side_ad{margin-bottom: 10px;}
 body{margin-bottom: 30px;}
 #header {height: 30px;border-radius: 0 0 6px 6px;}
-#nav {height: 100px;background: rosybrown;}
-#search{width: 958px;height: 114px;margin:0 auto 10px;}
-#search .bar{}
+#nav {height: 100px;position: relative;}
+#search{width: 958px;height: 114px;margin:0 auto 10px;position: relative;}
 .main{width: 710px;}
 .main_wrap{padding-bottom: 10px;}
 .section{width:318px;padding:0 15px;height:200px;}
@@ -57,3 +56,35 @@ body{margin-bottom: 30px;}
 #header .link a:hover{text-decoration: underline;}
 #header .link .ico1{ background-position: 0 3px;}
 #header .link .ico2{background-position: 0 -27px;}
+
+#nav ul{position:absolute; top:10px;}
+#nav li{float:left;}
+#nav li a{display:block;  width: 66px;padding-top:50px;text-align:center;background:url(../img/nav_bg.png) no-repeat;color:#333;}
+#nav li a:hover{text-decoration: underline;}
+#nav .bg1{background-position: 0 0 ;}
+#nav .bg2{background-position: -66px 0 ;}
+#nav .bg3{background-position: -132px 0 ;}
+#nav .bg4{background-position: -198px 0 ;}
+#nav .bg5{background-position: -264px 0 ;}
+#nav .bg6{background-position: -330px 0 ;}
+#nav .bg7{background-position: -396px 0 ;}
+#nav .bg8{background-position: -462px 0 ;}
+#nav .bg9{background-position: -528px 0 ;}
+#nav .bg10{background-position: -594px 0 ;}
+
+#nav .bg1:hover{background-position: 0 -70px ;}
+#nav .bg2:hover{background-position: -66px -70px ;}
+#nav .bg3:hover{background-position: -132px -70px ;}
+#nav .bg4:hover{background-position: -198px -70px ;}
+#nav .bg5:hover{background-position: -264px -70px ;}
+#nav .bg6:hover{background-position: -330px -70px ;}
+#nav .bg7:hover{background-position: -396px -70px ;}
+#nav .bg8:hover{background-position: -462px -70px ;}
+#nav .bg9:hover{background-position: -528px -70px ;}
+#nav .bg10:hover{background-position: -594px -70px ;}
+#nav .nav_1{left:11px;}
+#nav .nav_2{right:11px;}
+#nav h1{width:223px;height:62px;margin: 0 auto;position: relative;top:10px;}
+
+
+#search .bar{width: 958px; height: 64px;border: 1px solid #c40d0e; position: absolute;top: 16px;left: -1px;border-radius: 5px;background: #e21c01;box-shadow: 2px 3px 2px #e3e3e3;}
